--- a/WpfChatClient/MainWindow.xaml
+++ b/WpfChatClient/MainWindow.xaml
@@ -6,24 +6,25 @@
         xmlns:local="clr-namespace:WpfChatClient"
         mc:Ignorable="d"
         Title="WpfChatClient" Height="491" Width="631" Closed="Shutdown">
-    <Grid x:Name="WpfChatClient" Margin="10,10,96,17">
+    <Grid x:Name="WpfChatClient" Margin="10,10,10,11">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="13*"/>
-            <ColumnDefinition Width="187*"/>
+            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="607*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="connectBtn" Content="Connect/Disconnect" HorizontalAlignment="Left" Height="35" Margin="10,41,0,0" VerticalAlignment="Top" Width="138" Grid.ColumnSpan="2" Click="connectBtn_Click"/>
-        <Label x:Name="connectionStatus" Content="Disconnected" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="92" Foreground="Red" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="userNameTxtBox" HorizontalAlignment="Left" Height="23" Margin="10,112,0,0" TextWrapping="Wrap" Text="Anonymous" VerticalAlignment="Top" Width="138" Grid.ColumnSpan="2" SelectionTextBrush="#FFF70606"/>
-        <Button x:Name="sendMessageBtn" Content="Send message" HorizontalAlignment="Left" Height="22" Margin="10,299,0,0" VerticalAlignment="Top" Width="138" Grid.ColumnSpan="2" Click="sendMessageBtn_Click"/>
-        <Label Content="Set your name:" HorizontalAlignment="Left" Margin="10,89,0,0" VerticalAlignment="Top" Width="92" FontSize="9" Foreground="#FF838383" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="messageTxtBox" HorizontalAlignment="Left" Height="84" Margin="10,201,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" Grid.ColumnSpan="2" ToolTip="Type your chat message here"/>
-        <RichTextBox x:Name="chatTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="438" Margin="123,9,0,0" VerticalAlignment="Top" Width="452">
+        <Button x:Name="connectBtn" Content="Connect/Disconnect" HorizontalAlignment="Left" Height="35" Margin="0,41,0,0" VerticalAlignment="Top" Width="138" Click="connectBtn_Click" Grid.Column="1"/>
+        <Label x:Name="connectionStatus" Content="Disconnected" HorizontalAlignment="Left" Margin="1,10,0,0" VerticalAlignment="Top" Width="92" Foreground="Red" Grid.Column="1" Height="26"/>
+        <TextBox x:Name="userNameTxtBox" HorizontalAlignment="Left" Height="23" Margin="0,112,0,0" TextWrapping="Wrap" Text="Anonymous" VerticalAlignment="Top" Width="138" SelectionTextBrush="#FFF70606" Grid.Column="1"/>
+        <Button x:Name="sendMessageBtn" Content="Send message" HorizontalAlignment="Left" Height="22" Margin="0,299,0,0" VerticalAlignment="Top" Width="138" Click="sendMessageBtn_Click" Grid.Column="1"/>
+        <Label Content="Set your name:" HorizontalAlignment="Left" Margin="0,89,0,0" VerticalAlignment="Top" Width="92" FontSize="9" Foreground="#FF838383" Grid.Column="1" Height="22"/>
+        <TextBox x:Name="messageTxtBox" HorizontalAlignment="Left" Height="84" Margin="0,201,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" ToolTip="Type your chat message here" Grid.Column="1"/>
+        <RichTextBox x:Name="chatTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="438" Margin="145,6,0,0" VerticalAlignment="Top" Width="452">
             <FlowDocument>
                 <Paragraph>
                     <Run Text=""/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
+        <Button x:Name="subscribeBtn" Content="Subscribe" HorizontalAlignment="Left" Height="22" Margin="0,340,0,0" VerticalAlignment="Top" Width="138" Click="subscribeBtn_Click" Grid.Column="1"/>
 
     </Grid>
 </Window>
