--- a/WebChatClient/Views/Home/Index.cshtml
+++ b/WebChatClient/Views/Home/Index.cshtml
@@ -16,21 +16,23 @@
             <div class="input-group">
                 <input id="name" class="form-control" placeholder="Anonymous" type="text"/>
                 <button class="btn btn-primary form-control-append mr-2" style="width:180px" id="connectButton" onclick="connect()">Connect</button>
-                <button class="btn btn-light mr-2" style="width:180px" id="subscribeButton" onclick="subscribe()">Subscribe</button>
+                <button class="btn btn-outline-primary mr-2" style="width:180px" id="subscribeButton" onclick="subscribe()">Subscribe</button>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-12">
 @*            <div style="width:100%; height:200px" id="messages-content"></div>*@
-            <textarea style="width:100%; height:500px" id="messages-content"></textarea>
+            <textarea style="width:100%; height:400px" id="messages-content"></textarea>
         </div>
     </div>
     <div class="row py-3 my-3">
         <div class="col-md-12">
             <div class="input-group">
                 <input id="message" class="form-control" type="text"/>
-                <button class="btn btn-primary form-control-append" style="width:180px" onclick="sendMessage()" >Send</button>
+                <button class="btn btn-primary form-control-append mr-2" style="width:120px" onclick="sendMessage()">Send</button>
+                <button class="btn btn-outline-primary form-control-append mr-2" style="width:120px" onclick="toServerStream()">Send stream</button>
+                <button class="btn btn-outline-primary mr-2" style="width:120px" onclick="fromServerStream()">Get stream</button>
             </div>
         </div>
     </div>
