--- a/WpfChatClient/MainWindow.xaml
+++ b/WpfChatClient/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfChatClient"
         mc:Ignorable="d"
-        Title="WpfChatClient" Height="491" Width="631" Closed="Shutdown">
+        Title="WpfChatClient" Height="515" Width="653" Closed="Shutdown">
     <Grid x:Name="WpfChatClient" Margin="10,10,10,11">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="4*"/>
@@ -14,17 +14,20 @@
         <Button x:Name="connectBtn" Content="Connect/Disconnect" HorizontalAlignment="Left" Height="35" Margin="0,41,0,0" VerticalAlignment="Top" Width="138" Click="connectBtn_Click" Grid.Column="1"/>
         <Label x:Name="connectionStatus" Content="Disconnected" HorizontalAlignment="Left" Margin="1,10,0,0" VerticalAlignment="Top" Width="92" Foreground="Red" Grid.Column="1" Height="26"/>
         <TextBox x:Name="userNameTxtBox" HorizontalAlignment="Left" Height="23" Margin="0,112,0,0" TextWrapping="Wrap" Text="Anonymous" VerticalAlignment="Top" Width="138" SelectionTextBrush="#FFF70606" Grid.Column="1"/>
-        <Button x:Name="sendMessageBtn" Content="Send message" HorizontalAlignment="Left" Height="22" Margin="0,299,0,0" VerticalAlignment="Top" Width="138" Click="sendMessageBtn_Click" Grid.Column="1"/>
+        <Button x:Name="sendMessageBtn" Content="Send message" HorizontalAlignment="Left" Height="22" Margin="0,261,0,0" VerticalAlignment="Top" Width="138" Click="sendMessageBtn_Click" Grid.Column="1"/>
         <Label Content="Set your name:" HorizontalAlignment="Left" Margin="0,89,0,0" VerticalAlignment="Top" Width="92" FontSize="9" Foreground="#FF838383" Grid.Column="1" Height="22"/>
-        <TextBox x:Name="messageTxtBox" HorizontalAlignment="Left" Height="84" Margin="0,201,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" ToolTip="Type your chat message here" Grid.Column="1"/>
-        <RichTextBox x:Name="chatTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="438" Margin="145,6,0,0" VerticalAlignment="Top" Width="452">
+        <TextBox x:Name="messageTxtBox" HorizontalAlignment="Left" Height="84" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" ToolTip="Type your chat message here" Grid.Column="1" Margin="0,161,0,0"/>
+        <RichTextBox x:Name="chatTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="438" Margin="145,6,0,0" VerticalAlignment="Top" Width="462">
             <FlowDocument>
                 <Paragraph>
                     <Run Text=""/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
-        <Button x:Name="subscribeBtn" Content="Subscribe" HorizontalAlignment="Left" Height="22" Margin="0,340,0,0" VerticalAlignment="Top" Width="138" Click="subscribeBtn_Click" Grid.Column="1"/>
+        <Button x:Name="subscribeBtn" Content="Subscribe" HorizontalAlignment="Left" Height="22" Margin="0,300,0,0" VerticalAlignment="Top" Width="138" Click="subscribeBtn_Click" Grid.Column="1"/>
+        <Label Content="Type your message:" HorizontalAlignment="Left" Margin="0,140,0,0" VerticalAlignment="Top" Width="92" FontSize="9" Foreground="#FF838383" Grid.Column="1" Height="22"/>
+        <Button x:Name="sendStreamToServerBtn" Content="Send stream to server" HorizontalAlignment="Left" Height="22" Margin="4,386,0,0" VerticalAlignment="Top" Width="138" Click="sendStreamToServerBtn_Click" Grid.ColumnSpan="2"/>
+        <Button x:Name="readStreamFromServerBtn" Content="Read stream from server" HorizontalAlignment="Left" Height="22" Margin="1,422,0,0" VerticalAlignment="Top" Width="138" Click="readStreamFromServerBtn_Click" Grid.Column="1"/>
 
     </Grid>
 </Window>
